[project]
name = "opensched"
version = "0.1.0"
description = "OpenSched scheduling environment"
authors = [{ name = "Soham" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["app"]