[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensched"
version = "0.1.0"
description = "OpenSched scheduling environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Soham Zade" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]