[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensched"
version = "0.1.0"
description = "OpenSched scheduling environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Soham Zade" }
]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "openai>=1.30.0",
  "requests>=2.31.0",
  "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]